# KuroCode-CLI

./: pyproject.toml
src/kurocode/: __main__.py  types.py
src/kurocode.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/kurocode/commands/: ask.py  chat.py  config_cmd.py  history.py  models.py
src/kurocode/core/: model_registry.py  renderer.py  session.py
src/kurocode/tests/unit/: test_model_registry.py  test_renderer.py  test_session.py
