[project]
name = "kurocode"
version = "0.1.0"
description = "A lightweight terminal client for OpenRouter's free AI models"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiosqlite>=0.22.1",
    "click>=8.4.1",
    "httpx>=0.28.1",
    "prompt-toolkit>=3.0.52",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "rich>=15.0.0",
    "tenacity>=9.1.4",
]

[project.scripts]
kurocode = "kurocode.__main__:cli"

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
    "pytest-cov>=7.1.0",
    "respx>=0.23.1",
    "ruff>=0.15.17",
]

# ---------------------------------------------------------------------------
# Ruff — linter + formatter
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
    "ANN", # flake8-annotations
    "RUF", # ruff-specific rules
]
ignore = ["ANN101", "ANN102"]

[tool.ruff.lint.isort]
known-first-party = ["kurocode"]

# ---------------------------------------------------------------------------
# Mypy — strict static typing
# ---------------------------------------------------------------------------
[tool.mypy]
strict = true
python_version = "3.12"
files = ["src"]
mypy_path = "src"

# ---------------------------------------------------------------------------
# Pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests", "src/kurocode/tests"]
addopts = [
    "--cov=kurocode",
    "--cov-report=term-missing",
    "--cov-report=xml",
]

[tool.coverage.run]
source = ["src/kurocode"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "@(abc\\.)?abstractmethod",
]
